examples/test/testpolicy227.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy227
  namespace: namespace164
spec:
  podSelector:
    matchLabels:
      key27: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value19
      podSelector:
        matchLabels:
          key45: value19
          key8: value18
          key39: value34
